--- a/src/assets/styles/templatesStyles/Ecommerce/CustomizationModal.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/CustomizationModal.scss
@@ -14,11 +14,11 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 4px;
-    width: 660px;
-    height: 70%;
-    opacity: 0.98;
-    position: absolute;
-    top: 100px;
+    width: 45%;
+    height: 80%;
+    opacity: 0.9;
+    position: relative;
+    //top: 50px;
     z-index: 4;
     display: flex;
     flex-direction: column;
@@ -27,5 +27,14 @@
   
 .close-button {
     margin-top: 10px;
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid #007bff;
+    box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+    &:hover {
+        background-color: #007bff;
+        border: 1px solid transparent;
+        color: white;
+    }
 }
   
