--- a/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
@@ -4,6 +4,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  .header {
+    position: relative;
+    color: royalblue;
+  
+    &::before,
+    &::after {
+      position: absolute;
+      content: "";
+      height: 16px;
+      width: 16px;
+      border-radius: 50%;
+      left: 0;
+      background-color: royalblue;
+    }
+  
+    &::before {
+      width: 18px;
+      height: 18px;
+      background-color: royalblue;
+    }
+  
+    &::after {
+      width: 18px;
+      height: 18px;
+      animation: pulse 1s linear infinite;
+    }
+  }
+  
   .template-customization {
     width: 100%;
     height: 100%;
@@ -13,8 +41,10 @@
     .sidebar {
       width: 30%;
       height: 100%;
-      background-color: #f2f2f2;
+      background-color: rgb(222, 223, 228);
       padding: 20px;
+      // display: flex;
+      // align-items: center;
       ul {
         list-style: none;
         padding: 0;
@@ -24,13 +54,16 @@
         margin-bottom: 10px;
         cursor: pointer;
         transition: color 0.3s ease;
+        color: royalblue;
+        font-size: 20px;
+        text-align: center;
         &:hover {
-          text-decoration: underline;
-          color: blue;
+          color: rgb(119, 71, 71);
         }
-        &:active {
-          color: blue;
-        }
+        // &:active {
+        //   color: blue;
+        //   text-decoration: underline;
+        // }
       }
       
     }
@@ -44,13 +77,16 @@
         padding: 20px;
         //background-color: #0056b3;
         display: flex;
-        
         overflow-y: scroll;
         .label {
           font-weight: bold;
           //margin-bottom: 5px;
         }
-        
+        .select-containers, .input-containers {
+          display: flex;
+          flex-direction: column;
+          //background-color: #0056b3;
+        }
         .input {
           width: 80%;
           padding: 8px;
@@ -66,6 +102,18 @@
           position: relative;
           left: 5%;
           cursor: pointer;
+        }
+        .upload, .add-product {
+          cursor: pointer;
+          border: none;
+          background-color: #007bff;
+          color: white;
+          box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+          &:hover {
+            background-color: white;
+            //border: 1px solid transparent;
+            color: #007bff;
+          }
         }
       }
       .form-buttons {
@@ -124,6 +172,17 @@
   }
 }
 
+@keyframes pulse {
+  from {
+    transform: scale(0.9);
+    opacity: 1;
+  }
+
+  to {
+    transform: scale(1.8);
+    opacity: 0;
+  }
+}
 
 
   
